added python implementation of glafic to chi2 test

--- a/chi2_test.ipynb
+++ b/chi2_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b01f7b3e",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "5359b830",
    "metadata": {},
    "outputs": [],
@@ -34,10 +34,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c0d75c41",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chi2 for x: 190.03871090026337\n"
+     ]
+    }
+   ],
    "source": [
     "obs_x = [20.77773, 21.27308, 20.39091, 20.81981, 20.30254, 20.95612, 21.05057, 21.25931]\n",
     "pred_x = [20.7645, 21.2761, 20.3933, 20.8199, 20.3032, 20.9608, 21.0459, 21.2593]\n",
@@ -51,7 +59,17 @@
    "execution_count": null,
    "id": "516dddeb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chi2 for x: 127.79987377380323\n",
+      "Chi2 for y: 62.23883712646014\n",
+      "Total Chi2: 190.03871090026337\n"
+     ]
+    }
+   ],
    "source": [
     "# chi2 calculation\n",
     "chi2_x = np.sum(((np.array(obs_x) - np.array(pred_x)) / np.array(sigma)) ** 2)\n",
@@ -61,11 +79,204 @@
     "print(f\"Chi2 for y: {chi2_y}\")\n",
     "print(f\"Total Chi2: {chi2_total}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "d59696bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def chi2calc_point_iplane(obs_data, predicted_images, chi2_params):\n",
+    "    \"\"\"\n",
+    "    Calculate image plane chi-squared for point sources\n",
+    "    \n",
+    "    Parameters:\n",
+    "    obs_data: array of shape (n_images, 7) containing:\n",
+    "        [x_obs, y_obs, flux_obs, pos_err, flux_err, td_obs, td_err]\n",
+    "    predicted_images: array of shape (n_pred, 4) containing:\n",
+    "        [x_pred, y_pred, magnification, time_delay]\n",
+    "    chi2_params: dict with keys:\n",
+    "        'chi2_usemag': 0 for flux, 1 for magnitude\n",
+    "        'chi2pen_nimg': penalty for wrong number of images\n",
+    "        'chi2pen_parity': penalty for parity violations\n",
+    "        'chi2pen_range': penalty for out of range parameters\n",
+    "    \n",
+    "    Returns:\n",
+    "    c2: array of length 5 [total, position, flux, time_delay, prior]\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    n_obs = len(obs_data)\n",
+    "    n_pred = len(predicted_images)\n",
+    "    \n",
+    "    # Initialize chi2 components\n",
+    "    c2 = np.zeros(5)  # [total, pos, flux, td, prior]\n",
+    "    \n",
+    "    if n_obs == 0:\n",
+    "        return c2\n",
+    "    \n",
+    "    # Check if we have the right number of predicted images\n",
+    "    if n_pred < n_obs:\n",
+    "        c2[0] = c2[1] = chi2_params['chi2pen_nimg']\n",
+    "        return c2\n",
+    "    \n",
+    "    # Image matching - find closest predicted image for each observation\n",
+    "    used_pred = np.zeros(n_pred, dtype=bool)\n",
+    "    matched_indices = np.zeros(n_obs, dtype=int)\n",
+    "    \n",
+    "    f1 = f2 = 0.0  # For flux normalization\n",
+    "    t1 = t2 = 0.0  # For time delay normalization\n",
+    "    \n",
+    "    for j in range(n_obs):\n",
+    "        min_dist2 = np.inf\n",
+    "        best_match = -1\n",
+    "        \n",
+    "        # Find closest unused predicted image\n",
+    "        for k in range(n_pred):\n",
+    "            if not used_pred[k]:\n",
+    "                # Calculate squared distance\n",
+    "                dx = predicted_images[k, 0] - obs_data[j, 0]\n",
+    "                dy = predicted_images[k, 1] - obs_data[j, 1]\n",
+    "                dist2 = dx*dx + dy*dy\n",
+    "                \n",
+    "                if dist2 < min_dist2:\n",
+    "                    min_dist2 = dist2\n",
+    "                    best_match = k\n",
+    "        \n",
+    "        if best_match == -1:\n",
+    "            c2[0] = c2[1] = chi2_params['chi2pen_nimg']\n",
+    "            return c2\n",
+    "        \n",
+    "        used_pred[best_match] = True\n",
+    "        matched_indices[j] = best_match\n",
+    "        \n",
+    "        # Position chi2 contribution\n",
+    "        if obs_data[j, 3] > 0.0:  # position error > 0\n",
+    "            c2[1] += min_dist2 / (obs_data[j, 3] * obs_data[j, 3])\n",
+    "        \n",
+    "        # Accumulate flux terms for normalization\n",
+    "        if obs_data[j, 4] > 0.0:  # flux error > 0\n",
+    "            mag_pred = predicted_images[best_match, 2]  # magnification\n",
+    "            if chi2_params['chi2_usemag'] == 0:\n",
+    "                # Use flux\n",
+    "                f1 += abs(obs_data[j, 2] * mag_pred) / (obs_data[j, 4] * obs_data[j, 4])\n",
+    "                f2 += (mag_pred * mag_pred) / (obs_data[j, 4] * obs_data[j, 4])\n",
+    "            else:\n",
+    "                # Use magnitude\n",
+    "                f1 += (obs_data[j, 2] + 2.5 * np.log10(abs(mag_pred))) / (obs_data[j, 4] * obs_data[j, 4])\n",
+    "                f2 += 1.0 / (obs_data[j, 4] * obs_data[j, 4])\n",
+    "        \n",
+    "        # Accumulate time delay terms for normalization\n",
+    "        if obs_data[j, 6] > 0.0:  # time delay error > 0\n",
+    "            td_pred = predicted_images[best_match, 3]  # time delay\n",
+    "            t1 += (obs_data[j, 5] - td_pred) / (obs_data[j, 6] * obs_data[j, 6])\n",
+    "            t2 += 1.0 / (obs_data[j, 6] * obs_data[j, 6])\n",
+    "    \n",
+    "    # Calculate flux and time delay normalizations\n",
+    "    flux_norm = f1 / f2 if f2 > 0.0 else 1.0\n",
+    "    td_norm = t1 / t2 if t2 > 0.0 else 0.0\n",
+    "    \n",
+    "    # Calculate flux and time delay chi2\n",
+    "    parity_violation = False\n",
+    "    \n",
+    "    for j in range(n_obs):\n",
+    "        k = matched_indices[j]\n",
+    "        mag_pred = predicted_images[k, 2]\n",
+    "        td_pred = predicted_images[k, 3]\n",
+    "        \n",
+    "        # Flux chi2\n",
+    "        if obs_data[j, 4] > 0.0:\n",
+    "            if chi2_params['chi2_usemag'] == 0:\n",
+    "                # Flux mode\n",
+    "                flux_diff = abs(obs_data[j, 2]) - abs(mag_pred) * flux_norm\n",
+    "                c2[2] += (flux_diff * flux_diff) / (obs_data[j, 4] * obs_data[j, 4])\n",
+    "            else:\n",
+    "                # Magnitude mode\n",
+    "                mag_diff = obs_data[j, 2] + 2.5 * np.log10(abs(mag_pred)) - flux_norm\n",
+    "                c2[2] += (mag_diff * mag_diff) / (obs_data[j, 4] * obs_data[j, 4])\n",
+    "        \n",
+    "        # Time delay chi2\n",
+    "        if obs_data[j, 6] > 0.0:\n",
+    "            td_diff = obs_data[j, 5] - td_pred - td_norm\n",
+    "            c2[3] += (td_diff * td_diff) / (obs_data[j, 6] * obs_data[j, 6])\n",
+    "    \n",
+    "    # Apply parity penalty if needed\n",
+    "    if parity_violation:\n",
+    "        c2[2] = chi2_params['chi2pen_parity']\n",
+    "    \n",
+    "    # Total chi2 (prior c2[4] would be added separately)\n",
+    "    c2[0] = c2[1] + c2[2] + c2[3] + c2[4]\n",
+    "    \n",
+    "    return c2\n",
+    "\n",
+    "# Example usage:\n",
+    "def example_usage():\n",
+    "    # Example observation data: [x, y, flux, pos_err, flux_err, td, td_err]\n",
+    "    obs_data = np.array([\n",
+    "        [20.77773, 20.30254, 0.0, 0.00128, 0.0, 0.0, 0.0, 0],  # Image 1\n",
+    "        [21.27308, 20.95612, 0.0, 0.00085, 0.0, 0.0, 0.0, 0],\n",
+    "        [20.39091, 21.05057, 0.0, 0.00083, 0.0, 0.0, 0.0, 0],\n",
+    "        [20.81981, 21.25931, 0.0, 0.00039, 0.0, 0.0, 0.0, 0]  # Image 2\n",
+    "    ])\n",
+    "    \n",
+    "    # Example predicted images: [x, y, magnification, time_delay]\n",
+    "    predicted_images = np.array([\n",
+    "        [20.7645, 20.3032, -6.6948, 1.051],\n",
+    "        [21.2761, 20.9608, 13.6373, 0.000],\n",
+    "        [20.3933, 21.0459, 15.4906, 0.056],\n",
+    "        [20.8199, 21.2593, -19.6275, 0.169]\n",
+    "    ])\n",
+    "    \n",
+    "    # Chi2 parameters\n",
+    "    chi2_params = {\n",
+    "        'chi2_usemag': 0,\n",
+    "        'chi2pen_nimg': 1e30,\n",
+    "        'chi2pen_parity': 1e30,\n",
+    "        'chi2pen_range': 1e30\n",
+    "    }\n",
+    "    \n",
+    "    c2 = chi2calc_point_iplane(obs_data, predicted_images, chi2_params)\n",
+    "    print(f\"Chi2 components: total={c2[0]:.6e}, pos={c2[1]:.6e}, flux={c2[2]:.6e}, td={c2[3]:.6e}, prior={c2[4]:.6e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "193d95ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chi2 components: total=1.900387e+02, pos=1.900387e+02, flux=0.000000e+00, td=0.000000e+00, prior=0.000000e+00\n"
+     ]
+    }
+   ],
+   "source": [
+    "example_usage()"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
