shear_deflection quiver plot added

--- a/Test/error_handling_sims.ipynb
+++ b/Test/error_handling_sims.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "a65c1e10",
    "metadata": {},
    "outputs": [
@@ -81,11 +81,7 @@
     "            if missing_models:\n",
     "                print(f\"Missing models in {file}: {missing_models}\")\n",
     "    except Exception as e:\n",
-    "        print(f\"Error reading {file}: {e}\")\n",
-    "\n",
-    "\n",
-    "# Concat all dataframes together\n",
-    "# df = pd.concat((pd.read_csv(file, names=columns) for file in files), ignore_index=True)"
+    "        print(f\"Error reading {file}: {e}\")\n"
    ]
   },
   {
@@ -1301,6 +1297,19 @@
     "                os.remove(file_to_delete)\n",
     "    else:\n",
     "        print(f\"File {file_name} does not exist.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "eb896055",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Concat all dataframes together\n",
+    "df = pd.concat((pd.read_csv(file, names=columns) for file in files), ignore_index=True)\n",
+    "\n",
+    "df.to_csv(f'{base_path}{sim_version}_summary.csv', index=False)"
    ]
   }
  ],
