fixed csv saving to not include header names every concat

--- a/Test/error_handling_sims.ipynb
+++ b/Test/error_handling_sims.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "b3d246f7",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a65c1e10",
    "metadata": {},
    "outputs": [
@@ -31,7 +31,107 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reading 100 files...\n"
+      "Reading 100 files...\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_1.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_2.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_3.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_4.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_5.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_6.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_7.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_8.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_9.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_10.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_11.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_12.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_13.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_14.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_15.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_16.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_17.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_18.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_19.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_20.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_21.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_22.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_23.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_24.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_25.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_26.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_27.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_28.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_29.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_30.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_31.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_32.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_33.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_34.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_35.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_36.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_37.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_38.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_39.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_40.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_41.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_42.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_43.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_44.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_45.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_46.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_47.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_48.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_49.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_50.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_51.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_52.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_53.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_54.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_55.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_56.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_57.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_58.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_59.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_60.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_61.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_62.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_63.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_64.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_65.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_66.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_67.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_68.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_69.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_70.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_71.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_72.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_73.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_74.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_75.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_76.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_77.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_78.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_79.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_80.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_81.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_82.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_83.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_84.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_85.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_86.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_87.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_88.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_89.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_90.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_91.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_92.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_93.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_94.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_95.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_96.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_97.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_98.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_99.csv has the expected number of rows: 10000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 6_summary_100.csv has the expected number of rows: 10000.\n"
      ]
     }
    ],
@@ -80,6 +180,8 @@
     "            missing_models = expected_models - current_models\n",
     "            if missing_models:\n",
     "                print(f\"Missing models in {file}: {missing_models}\")\n",
+    "        else:\n",
+    "            print(f\"{file} has the expected number of rows: {len(df) - 1}.\")\n",
     "    except Exception as e:\n",
     "        print(f\"Error reading {file}: {e}\")\n"
    ]
@@ -1301,13 +1403,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "eb896055",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Concat all dataframes together\n",
-    "df = pd.concat((pd.read_csv(file, names=columns) for file in files), ignore_index=True)\n",
+    "df = pd.concat((pd.read_csv(file, names=columns, skiprows=1) for file in files), ignore_index=True)\n",
     "\n",
     "df.to_csv(f'{base_path}{sim_version}_summary.csv', index=False)"
    ]
