--- a/Test/Simulation/alpha_radial.ipynb
+++ b/Test/Simulation/alpha_radial.ipynb
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "70c7c3cb",
    "metadata": {},
    "outputs": [
@@ -203,7 +203,7 @@
     "plt.plot(np.arange(len(alpha_radial)), alpha_radial, color='b', label='SIE Alpha')\n",
     "plt.plot(np.arange(len(alpha_radial_sim)), alpha_radial_sim, color='r', label='Simulated Alpha')\n",
     "plt.xlabel('Radius (pixels)')\n",
-    "plt.ylabel('Alpha (arcsec)')\n",
+    "plt.ylabel('Alpha X')\n",
     "plt.title('Radial Profile of Alpha')\n",
     "plt.xlim(0, len(alpha_radial))\n",
     "plt.ylim(np.min(alpha_radial), np.max(alpha_radial))\n",
