small update to alpha_radial

--- a/Test/Simulation/alpha_radial.ipynb
+++ b/Test/Simulation/alpha_radial.ipynb
@@ -202,8 +202,8 @@
    "source": [
     "plt.plot(np.arange(len(alpha_radial)), alpha_radial, color='b', label='SIE Alpha')\n",
     "plt.plot(np.arange(len(alpha_radial_sim)), alpha_radial_sim, color='r', label='Simulated Alpha')\n",
-    "plt.xlabel('Radius (pixels)')\n",
-    "plt.ylabel('Alpha X')\n",
+    "plt.xlabel('Radius (pixels)', color='w')\n",
+    "plt.ylabel('Alpha X', color='w')\n",
     "plt.title('Radial Profile of Alpha')\n",
     "plt.xlim(0, len(alpha_radial))\n",
     "plt.ylim(np.min(alpha_radial), np.max(alpha_radial))\n",
