--- a/Test/Simulation/mass_ein.ipynb
+++ b/Test/Simulation/mass_ein.ipynb
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "07343be3",
    "metadata": {},
    "outputs": [
@@ -892,7 +892,7 @@
     }
    ],
    "source": [
-    "plt.imshow(kappa, cmap='magma', norm=LogNorm(vmin=kappa.min(), vmax=kappa.max()))\n",
+    "plt.imshow(kappa, cmap='magma', norm=LogNorm(vmin=kappa.min(), vmax=kappa.max()), origin='lower')\n",
     "plt.colorbar(label='Kappa')\n",
     "plt.scatter(crit_curve['x_crit'], crit_curve['y_crit'], color='red', s=1, label='Critical Curve')\n",
     "plt.scatter(crit_curve['x_caust'], crit_curve['y_caust'], color='white', s=1, label='Caustics')\n",
@@ -903,6 +903,112 @@
     "plt.xlim(0, kappa.shape[1])\n",
     "plt.ylim(kappa.shape[0], 0)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "5345e52e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum of Kappa inside the critical curve: 878.670654296875\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Pixels inside the critical curve\n",
+    "mask = np.zeros_like(kappa, dtype=bool)\n",
+    "for i in range(len(crit_curve)):\n",
+    "    x_crit = crit_curve['x_crit'][i]\n",
+    "    y_crit = crit_curve['y_crit'][i]\n",
+    "    x_caust = crit_curve['x_caust'][i]\n",
+    "    y_caust = crit_curve['y_caust'][i]\n",
+    "    \n",
+    "    # Create a mask for the critical curve\n",
+    "    rr, cc = np.meshgrid(np.arange(kappa.shape[0]), np.arange(kappa.shape[1]), indexing='ij')\n",
+    "    mask |= ((rr - y_crit)**2 + (cc - x_crit)**2 <= 1) | ((rr - y_caust)**2 + (cc - x_caust)**2 <= 1)\n",
+    "mask = mask.astype(bool)\n",
+    "\n",
+    "# Kappa values inside the critical curve\n",
+    "kappa_inside = kappa[mask]\n",
+    "kappa_inside = kappa_inside[~np.isnan(kappa_inside)]\n",
+    "\n",
+    "sum_kappa_inside = np.sum(kappa_inside)\n",
+    "print(f\"Sum of Kappa inside the critical curve: {sum_kappa_inside}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "d3cc6f63",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sum_kappa_inside_crit_curve(loc, model_ver):\n",
+    "    \"\"\"\n",
+    "    Calculate the sum of kappa values inside the critical curve.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    kappa (2D array): Kappa values.\n",
+    "    crit_curve (DataFrame): DataFrame containing critical curve coordinates.\n",
+    "    \n",
+    "    Returns:\n",
+    "    float: Sum of kappa values inside the critical curve.\n",
+    "    \"\"\"\n",
+    "    loc = loc\n",
+    "    model_ver = model_ver\n",
+    "\n",
+    "    # FITS file\n",
+    "    hdu_list = fits.open(loc + '/' + model_ver + '_lens.fits')\n",
+    "\n",
+    "    # Extract kappa \n",
+    "    kappa = hdu_list[0].data[3]\n",
+    "    kappa = np.array(kappa)\n",
+    "\n",
+    "    columns = ['x_crit', 'y_crit', 'x_caust', 'y_caust', 'x_crit_1', 'y_crit_1', 'x_caust_1', 'y_caust_1']\n",
+    "    file_crit = loc + '/' + model_ver + '_crit.dat'\n",
+    "    crit_curve = pd.read_csv(file_crit, delim_whitespace=True, header=None, names=columns)\n",
+    "    crit_curve = (crit_curve - 20) / 0.01\n",
+    "\n",
+    "\n",
+    "    mask = np.zeros_like(kappa, dtype=bool)\n",
+    "    for i in range(len(crit_curve)):\n",
+    "        x_crit = crit_curve['x_crit'][i]\n",
+    "        y_crit = crit_curve['y_crit'][i]\n",
+    "        x_caust = crit_curve['x_caust'][i]\n",
+    "        y_caust = crit_curve['y_caust'][i]\n",
+    "        \n",
+    "        # Create a mask for the critical curve\n",
+    "        rr, cc = np.meshgrid(np.arange(kappa.shape[0]), np.arange(kappa.shape[1]), indexing='ij')\n",
+    "        mask |= ((rr - y_crit)**2 + (cc - x_crit)**2 <= 1) | ((rr - y_caust)**2 + (cc - x_caust)**2 <= 1)\n",
+    "    \n",
+    "    kappa_inside = kappa[mask]\n",
+    "    kappa_inside = kappa_inside[~np.isnan(kappa_inside)]\n",
+    "    \n",
+    "    return np.sum(kappa_inside)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "a7ca1250",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum of Kappa inside the critical curve: 878.670654296875\n"
+     ]
+    }
+   ],
+   "source": [
+    "sum_kappa = sum_kappa_inside_crit_curve('SIE', 'SIE_POS')\n",
+    "print(f\"Sum of Kappa inside the critical curve: {sum_kappa}\")"
    ]
   }
  ],
