added masses within critical curves to sim 5 csv

--- a/Test/Simulation/mass_ein.ipynb
+++ b/Test/Simulation/mass_ein.ipynb
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "a7ca1250",
    "metadata": {},
    "outputs": [
@@ -1002,12 +1002,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sum of Kappa inside the critical curve: 878.670654296875\n"
+      "Sum of Kappa inside the critical curve: 398.93505859375\n"
      ]
     }
    ],
    "source": [
-    "sum_kappa = sum_kappa_inside_crit_curve('SIE', 'SIE_POS')\n",
+    "sum_kappa = sum_kappa_inside_crit_curve('/Volumes/ASTRO/Sim 4', 'SIE_POS_SHEAR_0.31_200.0_0.5')\n",
     "print(f\"Sum of Kappa inside the critical curve: {sum_kappa}\")"
    ]
   }
